tests/ui/traits/const-traits/assoc-type-const-bound-usage-1.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/assoc-type-const-bound-usage-1.rs:4:39
   |
LL | #![feature(const_trait_impl, effects, generic_const_exprs)]
   |                                       ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == T`
  --> $DIR/assoc-type-const-bound-usage-1.rs:15:44
   |
LL | fn unqualified<T: const Trait>() -> Type<{ T::Assoc::func() }> {
   |                                            ^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == T`
  --> $DIR/assoc-type-const-bound-usage-1.rs:19:42
   |
LL | fn qualified<T: const Trait>() -> Type<{ <T as Trait>::Assoc::func() }> {
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0271`.
